--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,11 @@
 
     <string name="app_name">Repeater</string>
     <string name="action_settings">Settings</string>
+    <string name="action_exit">Exit</string>
     <string name="playback_failed">The player doesn\'t support this type of audio file.</string>
-    <string name="btnApoint"> A </string>
-    <string name="btnBpoint"> B </string>
-    <string name="btnPlayHoldStatePlaying">Playing</string>
-    <string name="btnPlayHoldStateHold">Holding</string>
+    <string name="btn_apoint"> A </string>
+    <string name="btn_bpoint"> B </string>
+    <string name="btn_play_hold_state_playing">Playing</string>
+    <string name="btn_play_hold_state_hold">Holding</string>
 
 </resources>
